--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   camera: ^0.10.5+9
   country_code_picker: ^3.0.0
   signature: ^5.4.1
+  pinput: ^4.0.0
 
 dev_dependencies:
   build_runner: ^2.4.8
