Completed the UI of explore(only graphs are pending) started working on the buy flow 1st screen completed. *Currently taking random stocks data for testing.*

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "terminal.integrated.shellIntegration.suggestEnabled": false
+  "terminal.integrated.shellIntegration.suggestEnabled": false,
+  "C_Cpp.default.compilerPath": "C:\\Mingw\\bin\\gcc.exe"
 }
