--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   country_code_picker: ^3.0.0
   signature: ^5.4.1
   pinput: ^4.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   build_runner: ^2.4.8
