--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
 flutter_gen:
   integrations:
     flutter_svg: true
+    lottie: true
 
 flutter:
   uses-material-design: true
