--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   signature: ^5.4.1
   pinput: ^4.0.0
   intl: ^0.19.0
+  flutter_slidable: ^3.1.0
 
 dev_dependencies:
   build_runner: ^2.4.8
