--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   pinput: ^4.0.0
   intl: ^0.19.0
   flutter_slidable: ^3.1.0
+  share_plus: ^9.0.0
 
 dev_dependencies:
   build_runner: ^2.4.8
