--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   intl: ^0.19.0
   flutter_slidable: ^3.1.0
   share_plus: ^9.0.0
+  fl_chart: ^0.67.0
+  syncfusion_flutter_charts: ^25.1.41+1
 
 dev_dependencies:
   build_runner: ^2.4.8
