--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   share_plus: ^9.0.0
   fl_chart: ^0.68.0
   syncfusion_flutter_charts: ^25.1.41+1
+  stacked_firebase_auth: ^2.20.0
+  firebase_core: ^2.27.1
+  flutter_image_compress: ^2.3.0
+  flutter_cached_pdfview: ^0.4.2
+
 
 dev_dependencies:
   build_runner: ^2.4.8
