--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
 environment:
-  sdk: ">=3.3.1 <4.0.0"
+  sdk: ">=3.5.0 <4.0.0"
 
 dependencies:
   cupertino_icons: ^1.0.6
@@ -33,11 +33,13 @@ dependencies:
   flutter_slidable: ^3.1.0
   share_plus: ^9.0.0
   fl_chart: ^0.68.0
-  syncfusion_flutter_charts: ^25.1.41+1
+  custom_syncfusion_flutter_charts: ^1.0.1
   stacked_firebase_auth: ^2.20.0
   firebase_core: ^2.27.1
   flutter_image_compress: ^2.3.0
   flutter_cached_pdfview: ^0.4.2
+  dropdown_flutter: ^1.0.1
+  dropdown_search: ^5.0.6
 
 
 dev_dependencies:
