--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,36 +6,36 @@ environment:
   sdk: ">=3.5.0 <4.0.0"
 
 dependencies:
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   get: ^4.6.6
   flutter:
     sdk: flutter
   get_storage: ^2.1.1
-  dio: ^5.4.1
+  dio: ^5.6.0
   google_fonts: ^6.2.1
   new_version_plus: ^0.0.11
-  lottie: ^3.1.0
+  lottie: ^3.1.2
   flutter_svg: ^2.0.10+1
   encrypt: ^5.0.3
   tuple: ^2.0.2
-  crypto: ^3.0.3
-  cached_network_image: ^3.3.1
-  url_launcher: ^6.2.5
-  firebase_auth: ^4.17.9
-  connectivity_plus: ^6.0.3
-  smooth_page_indicator: ^1.1.0
-  image_picker: ^1.0.8
-  camera: ^0.11.0+1
+  crypto: ^3.0.5
+  cached_network_image: ^3.4.0
+  share_plus: ^10.0.0
+  url_launcher: ^6.3.0
+  firebase_auth:
+  connectivity_plus: ^6.0.5
+  smooth_page_indicator: ^1.2.0+3
+  image_picker: ^1.1.2
+  camera: ^0.11.0+2
   country_code_picker: ^3.0.0
-  signature: ^5.4.1
-  pinput: ^4.0.0
+  signature: ^5.5.0
+  pinput: ^5.0.0
   intl: ^0.19.0
-  flutter_slidable: ^3.1.0
-  share_plus: ^9.0.0
-  fl_chart: ^0.68.0
+  flutter_slidable: ^3.1.1
+  fl_chart: ^0.69.0
   custom_syncfusion_flutter_charts: ^1.0.1
-  stacked_firebase_auth: ^2.20.0
-  firebase_core: ^2.27.1
+  stacked_firebase_auth: ^2.20.1
+  firebase_core: ^3.4.0
   flutter_image_compress: ^2.3.0
   flutter_cached_pdfview: ^0.4.2
   dropdown_flutter: ^1.0.1
@@ -43,8 +43,8 @@ dependencies:
 
 
 dev_dependencies:
-  build_runner: ^2.4.8
-  flutter_gen_runner: ^5.4.0
+  build_runner: ^2.4.12
+  flutter_gen_runner: ^5.7.0
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
