--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   flutter_cached_pdfview: ^0.4.2
   dropdown_flutter: ^1.0.1
   dropdown_search: ^5.0.6
+  flutter_local_notifications: ^17.2.2
+  path_provider: ^2.1.4
+  permission_handler: ^11.3.1
+  open_file: ^3.5.3
 
 
 dev_dependencies:
