--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 on:
-  pull_request:
-    branches: [master]
   push:
-    branches: master
-name: "Build & release"
+    branches: [ master ]
+
+name: Build & release
+
 jobs:
   build:
     name: Build & release
@@ -22,5 +22,5 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/flutter-apk/*"
-          tag: v1.0.${{github.run_number}}
-          token: ${{ secrets.TOKEN }}
+          tag: v1.0.${{ github.run_number }}
+          token: ${{ secrets.TOKEN 1  }}
