--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ on:
   pull_request:
     branches: [master]
   push:
-    branches: master
+    branches: [master]
 name: "Build & release"
 jobs:
   build:
