--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   path_provider: ^2.1.4
   permission_handler: ^11.3.1
   open_file: ^3.5.3
-  flutter_paystack_max: ^1.0.4
+  pay_with_paystack: ^1.0.10
 
 
 dev_dependencies:
